# histinsights

./: .gitignore  LICENSE  README.md  pyproject.toml
corpus/: ancient.txt  modern.txt
src/histinsights/: __init__.py  cli.py
src/histinsights.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
