[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "histinsights"
version = "0.1.0"
description = "Assess historical source reliability from a local text corpus."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
histinsights = "histinsights.cli:main"
